fixed colo spawns and remove customs